# airflow-vaultspeed

./: .env  .gitignore  build_plugin.sh  docker-compose.yaml  readme.md
data/.minio.sys/: format.json
data/.minio.sys/tmp/.trash/8700f188-7965-46ef-8683-cc4d8248be18/: xl.meta.bkp
data/.minio.sys/tmp/.trash/88471cff-f11e-40bd-adca-bc57f0289d49/: xl.meta.bkp
docker/: Dockerfile  requirements.txt
docs/: airflow_plugin_docs.txt  mwaa_plugins_docs.txt
manifest/: readme.md
mwaa-plugin/: MANIFEST.in  README.md  build.sh  requirements.txt  setup.cfg  setup.py  version_checker.py
mwaa-plugin/vs_fmc_plugin/: __init__.py
mwaa-plugin/vs_fmc_plugin/hooks/: livy_hook.py  snowflake_hook.py
mwaa-plugin/vs_fmc_plugin/operators/: spark_sql_operator.py
pg-init-scripts/: init-db.sh
