[metadata]
name = airflow-provider-vaultspeed
version = 5.5.0.4
description = A VaultSpeed provider for Apache Airflow
long_description = file: README.md
long_description_content_type = text/markdown
author = VaultSpeed

[options]
packages = find:
python_requires = >=3.7
install_requires =
    apache-airflow>=2.0.0
    croniter>=0.3
    flask_admin>=1.5.8
    flask_appbuilder
    flask_babel
    apache-airflow-providers-microsoft-azure>=1.1.0
    azure-storage-blob
    apache-airflow-providers-databricks
    jaydebeapi
    apache-airflow-providers-jdbc
    apache-airflow-providers-snowflake>=2.0.0
    apache-airflow-providers-google

[options.entry_points]
apache_airflow_provider=
    provider_info=vs_fmc_plugin.__init__:get_provider_info